--- a/theme.yaml
+++ b/theme.yaml
@@ -1,17 +1,17 @@
 apiVersion: theme.halo.run/v1alpha1
 kind: Theme
 metadata:
-  name: theme-starter
+  name: theme-demo
 spec:
-  displayName: Theme Starter
+  displayName: Theme Demo
   author:
-    name: halo-dev
-    website: "https://halo.run"
-  description: Halo 2.0 Theme base on Thymeleaf
+    name: halo-demo
+    website: "http://halo.zfc.life"
+  description: 这个一个helo2的Demo模板
   logo: "https://halo.run/logo"
-  website: "https://halo.run"
-  repo: "https://github.com/halo-sigs/theme-starter"
-  settingName: "theme-starter-setting"
-  configMapName: "theme-starter-configMap"
+  website: "https://github.com/zzzfc/theme-demo"
+  repo: "https://github.com/zzzfc/theme-demo.git"
+  settingName: "theme-demo-setting"
+  configMapName: "theme-demo-configMap"
   version: "1.0"
   require: "*"
